--- a/3_Description of theoretical part/main.tex
+++ b/3_Description of theoretical part/main.tex
@@ -31,18 +31,17 @@
 \university{Vilniaus universitetas}
 \faculty{Matematikos ir informatikos fakultetas}
 \department{Programų sistemų katedra}
-\papertype{Naudotojų poreikių ir užduočių analizė}
-\title{Centralizuota Studijų Sistema}
-\titleineng{Centralized Study System}
+\papertype{Teorinės dalies aprašymas}
+\title{Ribų skaičiavimo programa}
+\titleineng{Limit calculation program}
 \status{3 kurso 5 grupės studentai}
 \author{Margiris Strakšys}
-\secondauthor{Gabrielė Saletytė}
+\secondauthor{Domantas Jadenkus}
 \thirdauthor{Vytautas Strimaitis}
 \fourthauthor{Mantas Petrikas}
-\fifthauthor{Vidmantas Bakštys}
-\supervisor{doc. dr. Kristina Lapin}
+%\supervisor{doc. dr. Kristina Lapin}
 \date{Vilnius – \the\year}
-\version{1.1}
+\version{1}
 
 % Nustatymai
 % \setmainfont{Palemonas}   % Pakeisti teksto šriftą į Palemonas (turi būti įdiegtas sistemoje)
