--- a/0_Limit Calculator Description/main.tex
+++ b/0_Limit Calculator Description/main.tex
@@ -31,7 +31,7 @@
 \university{Vilniaus universitetas}
 \faculty{Matematikos ir informatikos fakultetas}
 \department{Programų sistemų katedra}
-\papertype{Sistemos architektūros projektas}
+\papertype{Programos aprašas}
 \title{Ribų skaičiavimo programa}
 \titleineng{Limit calculation program}
 \status{3 kurso studentai}
@@ -56,6 +56,9 @@
     \tableofcontents
 	\pagenumbering{arabic} 
     
-	%\include{sections/anotacija}
+	\include{sections/systemArchitecture}
+	\include{sections/userGuide}
+	\include{sections/theoreticalPart}
+	\include{sections/testingProtocol}
 	
 \end{document}
