--- a/0_Limit Calculator Description/sections/theoreticalPart.tex
+++ b/0_Limit Calculator Description/sections/theoreticalPart.tex
@@ -2,12 +2,48 @@
 
 \subsection{Teiloro skleidinys}
 
+Teiloro begalinis skleidinys
+
 \[\lim_{x \to a} f(x) = f(a) + \frac{f'(a)}{1!}(x-a)+\frac{f''(a)}{2!}(x-a)^2 + \frac{f'''(a)}{3!}(x-a)^3 + ...\]
 
 \[\lim_{x \to a} f(x) = \sum_{n=0}^{\infty} \frac{f^{(n)}(a)}{n!}(x-a)^n\]
+
+Teiloro baigtinis skleidinys
 
 \[\lim_{x \to a} f(x) = f(a) + \frac{f'(a)}{1!}(x-a)+\frac{f''(a)}{2!}(x-a)^2 + ... + \frac{f^{(n)}(a)}{n!}(x-a)^n + r_n(x) \]
 
 \[\lim_{x \to a} f(x) = \sum_{k=0}^{n} \frac{f^{(k)}(a)}{k!}(x-a)^k + r_n(x)\]
 
-\[\lim_{x \to a} e^x= e^a + e^a (x-a) + \frac{e^a}{2!}(x-a)^2 + \frac{e^a}{3!}(x-a)^3 + ... \]
+$e^x$ riba
+
+\[\lim_{x \to a} e^x= e^a + \frac{e^a}{1!} (x-a) + \frac{e^a}{2!}(x-a)^2 + \frac{e^a}{3!}(x-a)^3 + ... \]
+
+Kai $a = 0$, tai: 
+\[\lim_{x \to 0} e^x= e^0 +  \frac{e^0}{1!} (x-0) + \frac{e^0}{2!} (x-0)^2 + \frac{e^0}{3!} (x-0)^3 + ... = 1 + x + \frac{x^2}{2} + \frac{x^3}{6} + ... \]
+
+$e^x$ riba
+
+\[\lim_{x \to a} e^x= e^a + \frac{e^a}{1!} (x-a) + \frac{e^a}{2!}(x-a)^2 + \frac{e^a}{3!}(x-a)^3 + ... \]
+
+Kai $a = 0$, tai: 
+\[\lim_{x \to 0} e^x= e^0 +  \frac{e^0}{1!} (x-0) + \frac{e^0}{2!} (x-0)^2 + \frac{e^0}{3!} (x-0)^3 + ... = 1 + x + \frac{x^2}{2} + \frac{x^3}{6} + ... \]
+
+$(1+x)^k$ riba
+
+\[\lim_{x \to a} (1+x)^k =\]
+\[=(1+x)^k + \frac{k(1+a)^{k-1}}{1!} (x-a) + \frac{k(k-1)(1+a)^{k-2}}{2!}(x-a)^2 + \frac{{k(k-1)(k-2)(1+a)^{k-3}}}{3!}(x-a)^3 + ... \]
+
+Kai $a = 0$, tai: 
+
+\[\lim_{x \to 0} (1+x)^k =\]
+\[=(1)^k + \frac{k(1)^{k-1}}{1!} (x-0) + \frac{k(k-1)(1)^{k-2}}{2!}(x-0)^2 + \frac{{k(k-1)(k-2)(1)^{k-3}}}{3!}(x-0)^3 + ...  = \]
+\[=1 + kx + \frac{k(k-1)}{2}x^2 + \frac{{k(k-1)(k-2)}}{6}x^3 + ...  = \]
+
+$\arctan(x)$ riba
+
+\[\lim_{x \to a} \arctan(x) = \arctan(a) + \frac{\frac{1}{a^2+1}}{1!}(x-a) + \frac{\frac{-2a}{(a^2+1)^2}}{2!}(x-a)^2 + \frac{\frac{6a^2-2}{(a^2+1)^3}}{3!}(x-a)^3 \]
+
+Kai $a = 0$, tai: 
+
+\[\lim_{x \to 0} \arctan(x) = \arctan(0) + \frac{\frac{1}{0^2+1}}{1!}(x-0) + \frac{\frac{-2*0}{(0^2+1)^2}}{2!}(x-0)^2 + \frac{\frac{6*0^2-2}{(0^2+1)^3}}{3!}(x-0)^3 =\]
+\[= 0 + x + 0 + \frac{1}{3} x^3 +... = x - \frac{x^3}{3} + \frac{x^5}{5} - ... \]
