--- a/0_Limit Calculator Description/sections/theoreticalPart.tex
+++ b/0_Limit Calculator Description/sections/theoreticalPart.tex
@@ -14,12 +14,10 @@ Teiloro baigtinis skleidinys
 
 \[\lim_{x \to a} f(x) = \sum_{k=0}^{n} \frac{f^{(k)}(a)}{k!}(x-a)^k + r_n(x)\]
 
-$e^x$ riba
+\[r_n(x) = \frac{f^{(n+1)}(c)}{(n+1)!}(x-a)^{n+1} \textrm{ , kur c } \in (a,x) \textrm{ arba c } \in (x,a).\]
 
-\[\lim_{x \to a} e^x= e^a + \frac{e^a}{1!} (x-a) + \frac{e^a}{2!}(x-a)^2 + \frac{e^a}{3!}(x-a)^3 + ... \]
+\[Jei f^{(n)} \textrm{ tolydi, tai } r_n(x) = o((x-a)^n) \textrm{ , kai } x \to a.\]
 
-Kai $a = 0$, tai: 
-\[\lim_{x \to 0} e^x= e^0 +  \frac{e^0}{1!} (x-0) + \frac{e^0}{2!} (x-0)^2 + \frac{e^0}{3!} (x-0)^3 + ... = 1 + x + \frac{x^2}{2} + \frac{x^3}{6} + ... \]
 
 $e^x$ riba
 
@@ -27,6 +25,32 @@ $e^x$ riba
 
 Kai $a = 0$, tai: 
 \[\lim_{x \to 0} e^x= e^0 +  \frac{e^0}{1!} (x-0) + \frac{e^0}{2!} (x-0)^2 + \frac{e^0}{3!} (x-0)^3 + ... = 1 + x + \frac{x^2}{2} + \frac{x^3}{6} + ... \]
+
+$e^x$ riba
+
+\[\lim_{x \to a} e^x= e^a + \frac{e^a}{1!} (x-a) + \frac{e^a}{2!}(x-a)^2 + \frac{e^a}{3!}(x-a)^3 + ... \]
+
+Kai $a = 0$, tai: 
+\[\lim_{x \to 0} e^x= e^0 +  \frac{e^0}{1!} (x-0) + \frac{e^0}{2!} (x-0)^2 + \frac{e^0}{3!} (x-0)^3 + ... = 1 + x + \frac{x^2}{2} + \frac{x^3}{6} + ... \]
+
+$sin(x)$ riba
+
+\[ \lim_{x \to a} sin(x) = sin(a) + \frac{cos(a)}{1!}(x-a)+\frac{-sin(a)}{2!}(x-a)^2+\frac{-cos(a)}{3!}(x-a)^3+\frac{sin(a)}{4!}(x-a)^4+...\]
+
+Kai $a = 0$, tai:
+\[ \lim_{x \to 0} sin(x) = sin(0) + \frac{cos(0)}{1!}(x-0)+\frac{-sin(0)}{2!}(x-0)^2+\frac{-cos(0)}{3!}(x-0)^3+\frac{sin(0)}{4!}(x-0)^4 + ... = \] 
+
+\[ = 0 + x + 0 + \frac{-1}{3!}x^3 + 0 + \frac{1}{5!}x^5 + ... = x - \frac{x^3}{6}+\frac{x^5}{120} - ... \]
+
+$cos(x)$ riba
+
+\[ \lim_{x \to a} cos(x) = cos(a) + \frac{-sin(a)}{1!}(x-a)+\frac{-cos(a)}{2!}(x-a)^2+\frac{sin(a)}{3!}(x-a)^3+\frac{cos(a)}{4!}(x-a)^4+...\]
+
+Kai $a = 0$, tai:
+\[ \lim_{x \to 0} cos(x) = cos(0) + \frac{-sin(0)}{1!}(x-0)+\frac{-cos(0)}{2!}(x-0)^2+\frac{sin(0)}{3!}(x-0)^3+\frac{cos(0)}{4!}(x-0)^4 + ... = \] 
+
+\[ = 1 + 0 + \frac{-1}{2!}x^2 + 0 + \frac{1}{4!}x^4 + ... = 1 - \frac{x^2}{2}+\frac{x^4}{24} - ... \]
+
 
 $(1+x)^k$ riba
 
@@ -38,6 +62,16 @@ Kai $a = 0$, tai:
 \[\lim_{x \to 0} (1+x)^k =\]
 \[=(1)^k + \frac{k(1)^{k-1}}{1!} (x-0) + \frac{k(k-1)(1)^{k-2}}{2!}(x-0)^2 + \frac{{k(k-1)(k-2)(1)^{k-3}}}{3!}(x-0)^3 + ...  = \]
 \[=1 + kx + \frac{k(k-1)}{2}x^2 + \frac{{k(k-1)(k-2)}}{6}x^3 + ...  = \]
+
+$ln(1+x)$ riba
+
+\[ \lim_{x \to a} ln(1+x) = ln(1+a) + \frac{\frac{1}{1+a}}{1!}(x-a) + \frac{-\frac{1}{(1+a)^2}}{2!}(x-a)^2 + \frac{\frac{2}{(1+a)^3}}{3!}(x-a)^3 + ... \]
+
+Kai $a = 0$, tai:
+
+\[ \lim_{x \to 0} ln(1+x) = ln(1+0) + \frac{\frac{1}{1+0}}{1!}(x-0) + \frac{-\frac{1}{(1+0)^2}}{2!}(x-0)^2 + \frac{\frac{2}{(1+0)^3}}{3!}(x-0)^3 + ... = \]
+
+\[ = 0 + x + \frac{-1}{2}x^2 + \frac{1}{3}x^3 + ... = x - \frac{x^2}{2} + \frac{x^3}{3} - ...\]
 
 $\arctan(x)$ riba
 
