--- a/0_Limit Calculator Description/sections/theoreticalPart.tex
+++ b/0_Limit Calculator Description/sections/theoreticalPart.tex
@@ -2,13 +2,13 @@
 
 \subsection{Teiloro skleidinys}
 
-Teiloro begalinis skleidinys
+\subsection*{Teiloro begalinis skleidinys}
 
 \[\lim_{x \to a} f(x) = f(a) + \frac{f'(a)}{1!}(x-a)+\frac{f''(a)}{2!}(x-a)^2 + \frac{f'''(a)}{3!}(x-a)^3 + ...\]
 
 \[\lim_{x \to a} f(x) = \sum_{n=0}^{\infty} \frac{f^{(n)}(a)}{n!}(x-a)^n\]
 
-Teiloro baigtinis skleidinys
+\subsection*{Teiloro baigtinis skleidinys}
 
 \[\lim_{x \to a} f(x) = f(a) + \frac{f'(a)}{1!}(x-a)+\frac{f''(a)}{2!}(x-a)^2 + ... + \frac{f^{(n)}(a)}{n!}(x-a)^n + r_n(x) \]
 
@@ -18,15 +18,18 @@ Teiloro baigtinis skleidinys
 
 \[Jei f^{(n)} \textrm{ tolydi, tai } r_n(x) = o((x-a)^n) \textrm{ , kai } x \to a.\]
 
+\subsection*{Elementarių funkcijų ribų pavyzdžiai}
 
-$e^x$ riba
+Pateikiami funcijų skleidiniai taške $a$ ir $a=0$. 
+
+$\bm{e^x}$ \textbf{riba}
 
 \[\lim_{x \to a} e^x= e^a + \frac{e^a}{1!} (x-a) + \frac{e^a}{2!}(x-a)^2 + \frac{e^a}{3!}(x-a)^3 + ... \]
 
 Kai $a = 0$, tai: 
 \[\lim_{x \to 0} e^x= e^0 +  \frac{e^0}{1!} (x-0) + \frac{e^0}{2!} (x-0)^2 + \frac{e^0}{3!} (x-0)^3 + ... = 1 + x + \frac{x^2}{2} + \frac{x^3}{6} + ... \]
 
-$sin(x)$ riba
+$\bm{sin(x)}$ \textbf{riba}
 
 \[ \lim_{x \to a} sin(x) = sin(a) + \frac{cos(a)}{1!}(x-a)+\frac{-sin(a)}{2!}(x-a)^2+\frac{-cos(a)}{3!}(x-a)^3+\frac{sin(a)}{4!}(x-a)^4+...\]
 
@@ -35,7 +38,7 @@ Kai $a = 0$, tai:
 
 \[ = 0 + x + 0 + \frac{-1}{3!}x^3 + 0 + \frac{1}{5!}x^5 + ... = x - \frac{x^3}{6}+\frac{x^5}{120} - ... \]
 
-$cos(x)$ riba
+$\bm{cos(x)}$ \textbf{riba}
 
 \[ \lim_{x \to a} cos(x) = cos(a) + \frac{-sin(a)}{1!}(x-a)+\frac{-cos(a)}{2!}(x-a)^2+\frac{sin(a)}{3!}(x-a)^3+\frac{cos(a)}{4!}(x-a)^4+...\]
 
@@ -44,7 +47,7 @@ Kai $a = 0$, tai:
 
 \[ = 1 + 0 + \frac{-1}{2!}x^2 + 0 + \frac{1}{4!}x^4 + ... = 1 - \frac{x^2}{2}+\frac{x^4}{24} - ... \]
 
-$(1+x)^k$ riba
+$\bm{(1+x)^k}$ \textbf{riba}
 
 \[\lim_{x \to a} (1+x)^k =\]
 \[=(1+x)^k + \frac{k(1+a)^{k-1}}{1!} (x-a) + \frac{k(k-1)(1+a)^{k-2}}{2!}(x-a)^2 + \frac{{k(k-1)(k-2)(1+a)^{k-3}}}{3!}(x-a)^3 + ... \]
@@ -55,7 +58,7 @@ Kai $a = 0$, tai:
 \[=(1)^k + \frac{k(1)^{k-1}}{1!} (x-0) + \frac{k(k-1)(1)^{k-2}}{2!}(x-0)^2 + \frac{{k(k-1)(k-2)(1)^{k-3}}}{3!}(x-0)^3 + ...  = \]
 \[=1 + kx + \frac{k(k-1)}{2}x^2 + \frac{{k(k-1)(k-2)}}{6}x^3 + ...  = \]
 
-$ln(1+x)$ riba
+$\bm{ln(1+x)}$ \textbf{riba}
 
 \[ \lim_{x \to a} ln(1+x) = ln(1+a) + \frac{\frac{1}{1+a}}{1!}(x-a) + \frac{-\frac{1}{(1+a)^2}}{2!}(x-a)^2 + \frac{\frac{2}{(1+a)^3}}{3!}(x-a)^3 + ... \]
 
@@ -65,7 +68,7 @@ Kai $a = 0$, tai:
 
 \[ = 0 + x + \frac{-1}{2}x^2 + \frac{1}{3}x^3 + ... = x - \frac{x^2}{2} + \frac{x^3}{3} - ...\]
 
-$\arctan(x)$ riba
+$\bm{\arctan(x)}$ \textbf{riba}
 
 \[\lim_{x \to a} \arctan(x) = \arctan(a) + \frac{\frac{1}{a^2+1}}{1!}(x-a) + \frac{\frac{-2a}{(a^2+1)^2}}{2!}(x-a)^2 + \frac{\frac{6a^2-2}{(a^2+1)^3}}{3!}(x-a)^3 \]
 
@@ -74,11 +77,7 @@ Kai $a = 0$, tai:
 \[\lim_{x \to 0} \arctan(x) = \arctan(0) + \frac{\frac{1}{0^2+1}}{1!}(x-0) + \frac{\frac{-2*0}{(0^2+1)^2}}{2!}(x-0)^2 + \frac{\frac{6*0^2-2}{(0^2+1)^3}}{3!}(x-0)^3 =\]
 \[= 0 + x + 0 + \frac{1}{3} x^3 +... = x - \frac{x^3}{3} + \frac{x^5}{5} - ... \]
 
-
-
-
 \subsection{Laipsnių eilutės}
-
 
 \[\sum_{n=0}^{\infty} a_n(x_n)^n = a_0 + a_1 x + a_2 x^2 + ...\]
 
