--- a/0_Limit Calculator Description/sections/theoreticalPart.tex
+++ b/0_Limit Calculator Description/sections/theoreticalPart.tex
@@ -151,7 +151,7 @@ Kai $a = 0$, tai:
 	
 	\[f(a) + \frac{f'(a)}{1!}(Px)+\frac{f''(a)}{2!}(Px)^2 + +\frac{f'''(a)}{3!}(Px)^3 + ...\]
 	
-	Gaulutinei laipsnių eilutei, į kurią susiprastina šis reiškinys, norime surasti koeficientą prie $x^n$. 
+	Galutinei laipsnių eilutei, į kurią susiprastina šis reiškinys, norime surasti koeficientą prie $x^n$. 
 	Šiame reiškinyje matome, kad šis koeficientas priklauso tik nuo pirmųjų $n+1$ sumos narių. 
 	Todėl norėdami rasti šį koeficientą, mes paimame tuos $n+1$ narių, juos suprastiname (naudodamiesi aukščiau parodytomis aritmetinėmis operacijomis) 
 	ir iš gautos eilutės paimame koeficientą prie $x^n$. 
@@ -161,7 +161,6 @@ Kai $a = 0$, tai:
 	Tai yra, turime pateikti funkciją: 
 	
 	\[ g(a,n) = \frac{f^{(n)}(a)}{n!}\]
-	
 	
 \subsection{Euristikos}
 	
