taylor series beggining.

--- a/0_Limit Calculator Description/sections/theoreticalPart.tex
+++ b/0_Limit Calculator Description/sections/theoreticalPart.tex
@@ -9,21 +9,18 @@
 %\[c_n x^n = a_n(x_n)^n + a_{n-1}x^{n-1} \times b_{1}{x} + a_{n+1}(x_{n+1}) \times b_{-1}x^{-1} + ...\]
 
 
-
-
-
-
-
-
-
-
-
 Programos kūrimo metodika pasirinkta laipsnių eilutės. 
 Tai yra Teiloro eilučių praplėtimas, kuriame leidžiame turėti baigtiniį kiekį neigiamų laipsnių. 
 Jeigu skleidžiant įvestį gaunamas begalinis kiekis neigiamų laipsnių, ši metodika nebėra tinkama taikyti norint rasti išraiškos ribą.
 Tokiu atveju, naudojame eurisitinę analizę. 
 
 \subsection{Teiloro eilutės}
+
+	Teiloro skleidiniai yra būdas aproksimuoti funkcijų reikšmes artėjant į konkretų tašką.
+	Pagrindinė apytikslės reikšmės skaičiavimo sąlyga - funkcija privalo būti diferencijuojama norimame intervale.
+	Funkcija keičiama polinomu pasinaudojant teiloro skleidiniu ir pasirinkto taško aplinkoje ji elgiasi pakankamai tiksliai kaip tikroji funkcija.
+	Kadangi skleidinio forma yra begalinė, tikslumą galima laisvai pasirinkti, imant norimą kiekį polinomo narių. 
+	
 	
 	\subsection*{Teiloro begalinis skleidinys}
 
