--- a/0_Limit Calculator Description/sections/theoreticalPart.tex
+++ b/0_Limit Calculator Description/sections/theoreticalPart.tex
@@ -23,84 +23,92 @@ Tokiu atveju, naudojame eurisitinę analizę.
 	Skaičiuojant ribas, bandoma skaičiuti suskaičiuoti pirmujų skleidinio narių reikšmes ir įvertinti likusių narių elgesį. 
 
 	\subsubsection*{Begalinis skleidinys}
+		Kadangi Teiloro skleidinys bendru atveju turi be galo daug polinominių narių, jis yra begalo tiklsus tikrosios funkcijos keitinys.
 
-	\[\lim_{x \to a} f(x) = f(a) + \frac{f'(a)}{1!}(x-a)+\frac{f''(a)}{2!}(x-a)^2 + \frac{f'''(a)}{3!}(x-a)^3 + ...\]
+		\[\lim_{x \to a} f(x) = f(a) + \frac{f'(a)}{1!}(x-a)+\frac{f''(a)}{2!}(x-a)^2 + \frac{f'''(a)}{3!}(x-a)^3 + ...\]
+		
+		Alternatyvi begalinės polinominės sumos formulė:
 
-	\[\lim_{x \to a} f(x) = \sum_{n=0}^{\infty} \frac{f^{(n)}(a)}{n!}(x-a)^n\]
+		\[\lim_{x \to a} f(x) = \sum_{n=0}^{\infty} \frac{f^{(n)}(a)}{n!}(x-a)^n\]
 
-\subsubsection*{Baigtinis skleidinys}
+	\subsubsection*{Baigtinis skleidinys}
 
-\[\lim_{x \to a} f(x) = f(a) + \frac{f'(a)}{1!}(x-a)+\frac{f''(a)}{2!}(x-a)^2 + ... + \frac{f^{(n)}(a)}{n!}(x-a)^n + r_n(x) \]
+		Visgi, realybėje neįmanoma suskaičiuoti tokios funkcijos tikslę reikšmę.
+		Todėl yra imamas baigtinis kiekis narių, o paklaida kompensuojama liekamojo nario $r_n(x)$ įvedimu.
 
-\[\lim_{x \to a} f(x) = \sum_{k=0}^{n} \frac{f^{(k)}(a)}{k!}(x-a)^k + r_n(x)\]
+		\[\lim_{x \to a} f(x) = f(a) + \frac{f'(a)}{1!}(x-a)+\frac{f''(a)}{2!}(x-a)^2 + ... + \frac{f^{(n)}(a)}{n!}(x-a)^n + r_n(x) \]
 
-Tegu funkcija $f$ yra $n+1$ kartą diferencijuojama.
-Tada:
+		Alternatyvi baigtinės polinominės sumos formulė:
+		
+		\[\lim_{x \to a} f(x) = \sum_{k=0}^{n} \frac{f^{(k)}(a)}{k!}(x-a)^k + r_n(x)\]
 
-\[r_n(x) = \frac{f^{(n+1)}(c)}{(n+1)!}(x-a)^{n+1} \textrm{ , kur c } \in (a,x) \textrm{ arba c } \in (x,a).\]
+		Tegu funkcija $f$ yra $n+1$ kartą diferencijuojama.
+		Tada:
 
-Jei $f^{(n)}$ tolydi, tai:
+		\[r_n(x) = \frac{f^{(n+1)}(c)}{(n+1)!}(x-a)^{n+1} \textrm{ , kur c } \in (a,x) \textrm{ arba c } \in (x,a).\]
 
-\[ r_n(x) = o((x-a)^n) \textrm{ , kai } x \to a.\]
+		Jei $f^{(n)}$ tolydi, tai:
 
-\subsubsection*{Elementarių funkcijų ribos}
+		\[ r_n(x) = o((x-a)^n) \textrm{ , kai } x \to a.\]
 
-Pateikiami funcijų skleidiniai taške $a$ ir $a=0$. 
+	\subsubsection*{Elementarių funkcijų ribos}
 
-$\bm{e^x}$ \textbf{riba}
+		Pateikiami funcijų skleidiniai taške $a$ ir $a=0$. 
 
-\[\lim_{x \to a} e^x= e^a + \frac{e^a}{1!} (x-a) + \frac{e^a}{2!}(x-a)^2 + \frac{e^a}{3!}(x-a)^3 + ... \]
+		$\bm{e^x}$ \textbf{riba}
 
-Kai $a = 0$, tai: 
-\[\lim_{x \to 0} e^x= e^0 +  \frac{e^0}{1!} (x-0) + \frac{e^0}{2!} (x-0)^2 + \frac{e^0}{3!} (x-0)^3 + ... = 1 + x + \frac{x^2}{2} + \frac{x^3}{6} + ... \]
+		\[\lim_{x \to a} e^x= e^a + \frac{e^a}{1!} (x-a) + \frac{e^a}{2!}(x-a)^2 + \frac{e^a}{3!}(x-a)^3 + ... \]
 
-$\bm{sin(x)}$ \textbf{riba}
+		Kai $a = 0$, tai: 
+		\[\lim_{x \to 0} e^x= e^0 +  \frac{e^0}{1!} (x-0) + \frac{e^0}{2!} (x-0)^2 + \frac{e^0}{3!} (x-0)^3 + ... = 1 + x + \frac{x^2}{2} + \frac{x^3}{6} + ... \]
 
-\[ \lim_{x \to a} sin(x) = sin(a) + \frac{cos(a)}{1!}(x-a)+\frac{-sin(a)}{2!}(x-a)^2+\frac{-cos(a)}{3!}(x-a)^3+\frac{sin(a)}{4!}(x-a)^4+...\]
+		$\bm{sin(x)}$ \textbf{riba}
 
-Kai $a = 0$, tai:
-\[ \lim_{x \to 0} sin(x) = sin(0) + \frac{cos(0)}{1!}(x-0)+\frac{-sin(0)}{2!}(x-0)^2+\frac{-cos(0)}{3!}(x-0)^3+\frac{sin(0)}{4!}(x-0)^4 + ... = \] 
+		\[ \lim_{x \to a} sin(x) = sin(a) + \frac{cos(a)}{1!}(x-a)+\frac{-sin(a)}{2!}(x-a)^2+\frac{-cos(a)}{3!}(x-a)^3+\frac{sin(a)}{4!}(x-a)^4+...\]
 
-\[ = 0 + x + 0 + \frac{-1}{3!}x^3 + 0 + \frac{1}{5!}x^5 + ... = x - \frac{x^3}{6}+\frac{x^5}{120} - ... \]
+		Kai $a = 0$, tai:
+		\[ \lim_{x \to 0} sin(x) = sin(0) + \frac{cos(0)}{1!}(x-0)+\frac{-sin(0)}{2!}(x-0)^2+\frac{-cos(0)}{3!}(x-0)^3+\frac{sin(0)}{4!}(x-0)^4 + ... = \] 
 
-$\bm{cos(x)}$ \textbf{riba}
+		\[ = 0 + x + 0 + \frac{-1}{3!}x^3 + 0 + \frac{1}{5!}x^5 + ... = x - \frac{x^3}{6}+\frac{x^5}{120} - ... \]
 
-\[ \lim_{x \to a} cos(x) = cos(a) + \frac{-sin(a)}{1!}(x-a)+\frac{-cos(a)}{2!}(x-a)^2+\frac{sin(a)}{3!}(x-a)^3+\frac{cos(a)}{4!}(x-a)^4+...\]
+		$\bm{cos(x)}$ \textbf{riba}
 
-Kai $a = 0$, tai:
-\[ \lim_{x \to 0} cos(x) = cos(0) + \frac{-sin(0)}{1!}(x-0)+\frac{-cos(0)}{2!}(x-0)^2+\frac{sin(0)}{3!}(x-0)^3+\frac{cos(0)}{4!}(x-0)^4 + ... = \] 
+		\[ \lim_{x \to a} cos(x) = cos(a) + \frac{-sin(a)}{1!}(x-a)+\frac{-cos(a)}{2!}(x-a)^2+\frac{sin(a)}{3!}(x-a)^3+\frac{cos(a)}{4!}(x-a)^4+...\]
 
-\[ = 1 + 0 + \frac{-1}{2!}x^2 + 0 + \frac{1}{4!}x^4 + ... = 1 - \frac{x^2}{2}+\frac{x^4}{24} - ... \]
+		Kai $a = 0$, tai:
+		\[ \lim_{x \to 0} cos(x) = cos(0) + \frac{-sin(0)}{1!}(x-0)+\frac{-cos(0)}{2!}(x-0)^2+\frac{sin(0)}{3!}(x-0)^3+\frac{cos(0)}{4!}(x-0)^4 + ... = \] 
 
-$\bm{(1+x)^k}$ \textbf{riba}
+		\[ = 1 + 0 + \frac{-1}{2!}x^2 + 0 + \frac{1}{4!}x^4 + ... = 1 - \frac{x^2}{2}+\frac{x^4}{24} - ... \]
 
-\[\lim_{x \to a} (1+x)^k =\]
-\[=(1+x)^k + \frac{k(1+a)^{k-1}}{1!} (x-a) + \frac{k(k-1)(1+a)^{k-2}}{2!}(x-a)^2 + \frac{{k(k-1)(k-2)(1+a)^{k-3}}}{3!}(x-a)^3 + ... \]
+		$\bm{(1+x)^k}$ \textbf{riba}
 
-Kai $a = 0$, tai: 
+		\[\lim_{x \to a} (1+x)^k =\]
+		\[=(1+x)^k + \frac{k(1+a)^{k-1}}{1!} (x-a) + \frac{k(k-1)(1+a)^{k-2}}{2!}(x-a)^2 + \frac{{k(k-1)(k-2)(1+a)^{k-3}}}{3!}(x-a)^3 + ... \]
 
-\[\lim_{x \to 0} (1+x)^k =\]
-\[=(1)^k + \frac{k(1)^{k-1}}{1!} (x-0) + \frac{k(k-1)(1)^{k-2}}{2!}(x-0)^2 + \frac{{k(k-1)(k-2)(1)^{k-3}}}{3!}(x-0)^3 + ...  = \]
-\[=1 + kx + \frac{k(k-1)}{2}x^2 + \frac{{k(k-1)(k-2)}}{6}x^3 + ...  = \]
+		Kai $a = 0$, tai: 
 
-$\bm{ln(1+x)}$ \textbf{riba}
+		\[\lim_{x \to 0} (1+x)^k =\]
+		\[=(1)^k + \frac{k(1)^{k-1}}{1!} (x-0) + \frac{k(k-1)(1)^{k-2}}{2!}(x-0)^2 + \frac{{k(k-1)(k-2)(1)^{k-3}}}{3!}(x-0)^3 + ...  = \]
+		\[=1 + kx + \frac{k(k-1)}{2}x^2 + \frac{{k(k-1)(k-2)}}{6}x^3 + ...  = \]
 
-\[ \lim_{x \to a} ln(1+x) = ln(1+a) + \frac{\frac{1}{1+a}}{1!}(x-a) + \frac{-\frac{1}{(1+a)^2}}{2!}(x-a)^2 + \frac{\frac{2}{(1+a)^3}}{3!}(x-a)^3 + ... \]
+		$\bm{ln(1+x)}$ \textbf{riba}
 
-Kai $a = 0$, tai:
+		\[ \lim_{x \to a} ln(1+x) = ln(1+a) + \frac{\frac{1}{1+a}}{1!}(x-a) + \frac{-\frac{1}{(1+a)^2}}{2!}(x-a)^2 + \frac{\frac{2}{(1+a)^3}}{3!}(x-a)^3 + ... \]
 
-\[ \lim_{x \to 0} ln(1+x) = ln(1+0) + \frac{\frac{1}{1+0}}{1!}(x-0) + \frac{-\frac{1}{(1+0)^2}}{2!}(x-0)^2 + \frac{\frac{2}{(1+0)^3}}{3!}(x-0)^3 + ... = \]
+		Kai $a = 0$, tai:
 
-\[ = 0 + x + \frac{-1}{2}x^2 + \frac{1}{3}x^3 + ... = x - \frac{x^2}{2} + \frac{x^3}{3} - ...\]
+		\[ \lim_{x \to 0} ln(1+x) = ln(1+0) + \frac{\frac{1}{1+0}}{1!}(x-0) + \frac{-\frac{1}{(1+0)^2}}{2!}(x-0)^2 + \frac{\frac{2}{(1+0)^3}}{3!}(x-0)^3 + ... = \]
 
-$\bm{\arctan(x)}$ \textbf{riba}
+		\[ = 0 + x + \frac{-1}{2}x^2 + \frac{1}{3}x^3 + ... = x - \frac{x^2}{2} + \frac{x^3}{3} - ...\]
 
-\[\lim_{x \to a} \arctan(x) = \arctan(a) + \frac{\frac{1}{a^2+1}}{1!}(x-a) + \frac{\frac{-2a}{(a^2+1)^2}}{2!}(x-a)^2 + \frac{\frac{6a^2-2}{(a^2+1)^3}}{3!}(x-a)^3 \]
+		$\bm{\arctan(x)}$ \textbf{riba}
 
-Kai $a = 0$, tai: 
+		\[\lim_{x \to a} \arctan(x) = \arctan(a) + \frac{\frac{1}{a^2+1}}{1!}(x-a) + \frac{\frac{-2a}{(a^2+1)^2}}{2!}(x-a)^2 + \frac{\frac{6a^2-2}{(a^2+1)^3}}{3!}(x-a)^3 \]
 
-\[\lim_{x \to 0} \arctan(x) = \arctan(0) + \frac{\frac{1}{0^2+1}}{1!}(x-0) + \frac{\frac{-2*0}{(0^2+1)^2}}{2!}(x-0)^2 + \frac{\frac{6*0^2-2}{(0^2+1)^3}}{3!}(x-0)^3 =\]
-\[= 0 + x + 0 + \frac{1}{3} x^3 +... = x - \frac{x^3}{3} + \frac{x^5}{5} - ... \]
+		Kai $a = 0$, tai: 
+
+		\[\lim_{x \to 0} \arctan(x) = \arctan(0) + \frac{\frac{1}{0^2+1}}{1!}(x-0) + \frac{\frac{-2*0}{(0^2+1)^2}}{2!}(x-0)^2 + \frac{\frac{6*0^2-2}{(0^2+1)^3}}{3!}(x-0)^3 =\]
+		\[= 0 + x + 0 + \frac{1}{3} x^3 +... = x - \frac{x^3}{3} + \frac{x^5}{5} - ... \]
 
 	
 \subsection{Laipsnių eilutės}
