--- a/0_Limit Calculator Description/sections/theoreticalPart.tex
+++ b/0_Limit Calculator Description/sections/theoreticalPart.tex
@@ -33,8 +33,8 @@ Tokiu atveju, naudojame eurisitinę analizę.
 
 	\subsubsection*{Baigtinis skleidinys}
 
-		Visgi, realybėje neįmanoma suskaičiuoti tokios funkcijos tikslę reikšmę.
-		Todėl yra imamas baigtinis kiekis narių, o paklaida kompensuojama liekamojo nario $r_n(x)$ įvedimu.
+		Praktiškai neįmanoma suskaičiuoti tokios funkcijos tikslią reikšmę, todėl yra imamas baigtinis kiekis primujų skleidinio narių,
+		o paklaida kompensuojama liekamojo nario $r_n(x)$ įvedimu.
 
 		\[\lim_{x \to a} f(x) = f(a) + \frac{f'(a)}{1!}(x-a)+\frac{f''(a)}{2!}(x-a)^2 + ... + \frac{f^{(n)}(a)}{n!}(x-a)^n + r_n(x) \]
 
@@ -43,7 +43,7 @@ Tokiu atveju, naudojame eurisitinę analizę.
 		\[\lim_{x \to a} f(x) = \sum_{k=0}^{n} \frac{f^{(k)}(a)}{k!}(x-a)^k + r_n(x)\]
 
 		Tegu funkcija $f$ yra $n+1$ kartą diferencijuojama.
-		Tada:
+		Tada paklaida lygi:
 
 		\[r_n(x) = \frac{f^{(n+1)}(c)}{(n+1)!}(x-a)^{n+1} \textrm{ , kur c } \in (a,x) \textrm{ arba c } \in (x,a).\]
 
@@ -53,7 +53,7 @@ Tokiu atveju, naudojame eurisitinę analizę.
 
 	\subsubsection*{Elementarių funkcijų ribos}
 
-		Pateikiami funcijų skleidiniai taške $a$ ir $a=0$. 
+		Elementarių funcijų skleidiniai taškuose $a$ ir $a=0$: 
 
 		$\bm{e^x}$ \textbf{riba}
 
