--- a/0_Limit Calculator Description/sections/testingProtocol.tex
+++ b/0_Limit Calculator Description/sections/testingProtocol.tex
@@ -41,7 +41,7 @@
     1.7 & \[ \lim_{x \to \infty} \frac{sin(x)}{x}\]                                             & 0         &           &           \\ \hline
     1.8 & \[ \lim_{x \to 0} \frac{sin(x)}{cos(x)} \]                                            & 0         &           &           \\ \hline
     1.9 & \[ \lim_{x \to 0} \frac{cos(x)}{sin(x)} \]                                            & \noLimit  &           &           \\ \hline    
-    1.10 & \[ \lim_{x \to \infty} \frac{1}{x} \]                                                 & 0         &           &           \\ \hline
+    1.10 & \[ \lim_{x \to \infty} \frac{1}{x} \]                                                & 0         &           &           \\ \hline
     1.11 & \[ \lim_{x \to -\infty} \frac{x^2}{x^4} \]                                           & 0         &           &           \\ \hline
     1.12 & \[ \lim_{x \to \infty} \frac{x^{\frac{3}{2}}}{x(\sqrt{x+1}+\sqrt{x-1}+2\sqrt{x})} \] & 1/4       &           &           \\ \hline
     1.13 & \[ \lim_{x \to 0} \frac{e^xsin(x)-x(1+x)}{x^3} \]                                    & 1/3       & 1/3       & \green    \\ \hline
@@ -49,6 +49,9 @@
     1.15 & \[ \lim_{x \to 5} (5+x)^5 \]                                                         & 100000    &           &           \\ \hline
     1.16 & \[ \lim_{x \to 0.7854} \sqrt(2)sin(x) \]                                             & ~1        &           &           \\ \hline
     1.17 & \[ \lim_{x \to 1} \frac{x^{\frac{3}{2}}}{x(\sqrt{x+1}+\sqrt{x-1}+2\sqrt{x})} \]      & ~0.2929   &           &           \\ \hline
+    1.18 & \[ \lim_{x \to \infty} \frac{x^2}{e^x} \]                                            & 0         &           &           \\ \hline
+    1.19 & \[ \lim_{x \to 0} \frac{\sqrt{x+4}-2}{x} \]                                          & 1/4         &           &           \\ \hline
+    
 
     \header{2}{Funkcijų kompozicijos ribos}
     2.1 & $$\lim_{x \to 0} sin({2arctg\frac{1}{x}})$$                                           & 0         &           &           \\ \hline
