Rebranding + some tex stuff.

--- a/0_Limit Calculator Description/main.tex
+++ b/0_Limit Calculator Description/main.tex
@@ -32,8 +32,8 @@
 \faculty{Matematikos ir informatikos fakultetas}
 \department{Programų sistemų katedra}
 \papertype{Programos aprašas}
-\title{Ribų skaičiavimo programa}
-\titleineng{Limit calculation program}
+\title{Ribų skaičiavimo programa ,,riboja.me''}
+\titleineng{Limit calculation program ,,riboja.me''}
 \status{3 kurso studentai}
 \author{Margiris Strakšys}
 \secondauthor{Domantas Jadenkus}
