--- a/0_Limit Calculator Description/sections/systemArchitecture.tex
+++ b/0_Limit Calculator Description/sections/systemArchitecture.tex
@@ -1,16 +1,27 @@
-\section{Sistemos architektūros projektas}
+\section{Sistemos architektūra}
 
-Programos kūrimui pasirinkta Haskell funkcinė programavimo kalba.
-Programos modulių rašymui sukurtas Stack projektas. 
-Būtent ši funkcinė programavimo kalba pasirinkta vietoj procedūrinės ar objektinės dėl kelių priežasčių, kaip: 
-savo tingaus skaičiavimo implementacijos (angl. \textit{Lazy computation}) ir stipri tipų sistema. 
- 
-Mūsų kuriamą sistemą sudaro: ribų skaičiavimo biblioteka, įvesties funkcijos sintaksinės analizės ir vartotojo sąsajos moduliai. 
-Vartotojo sąsajos modulis atsakingas, jog vartotojas galėtų į programą konsolės sąsajoje 
-įvesti pasirinktą funkciją, kurios ribą nori apskaičiuoti. 
-Taip pat, vartotojui pateikiamas ir gautas apskaičiuotas funkcijos ribos atsakymas, jeigu jį programai gauti pavyko. 
-Kitu atveju, pateikiama, jog riba yra ne skaičius (teigiama ar neigiama begalybė), ji neegzistuoja arba apskaičiuoti nepavyko.
-Įvesties analizės modulis atlieka įvesties formato funkcijos konvertavimo į 
-patogią ribų skaičiavimui programoje tinkamą formą (angl. \textit{parse}). 
-Ribų skaičiavimo biblioteka atsakinga, už įvestos funkcijos skleidimą pasinaudojant Teiloro skleidiniais ir
-mūsų apibrėžtomis - Laipsnių eilutėmis ir euristikomis.
+Programos kūrimui pasirinkta Haskell programavimo kalba bei Stack projektų valdymo įrankis.
+Kūrimui buvo pasirinkta Haskell programavimo kalba dėl šių priežasčių:
+\begin{enumerate}
+    \item Tingus skaičiavimas (angl. \textit{Lazy evaluation}). Haskell programavimo kalboje galima aprašyti begalines
+        duomenų struktūras, o veikimo metu jų sukonstruojama tik tokia dalis, kokia reikalinga, norint rasti atsakymą.
+        Pavyzdžiui, galime aprašyti, kad reiškinys turi begalinį Teiloro skleidinį, tačiau jį spausdinant reikalingas
+        tik pirmasis narys, todėl tik vienas narys ir bus suskaičiuotas.
+    \item Stipri tipų sistema. Haskell tipų sistema leidžia rašyti lengvai komponuojamą ir pernaudojamą kodą. Pavyzdžiui,
+        skaičiavimą galima pritaikyti taip, kad būtų naudojami tiek apytiksliai, tiek visiškai tikslūs skaičiai. Taip pat
+        nesunku valdyti skaičiavimo metu vykstančius efektus, pavyzdžiui, kai randame, kad kažkokia funkcijos dalis yra
+        neapibrėžta, arba neturime informacijos žingsnio atlikimui ir būtinai turime viską nutraukti.
+    \item Funkcinė programavimo kalba iš prigimties tinkama matematinių skaičiavimų modeliavimui.
+\end{enumerate}
+
+Siekiant palengvinti funkcionalumo perpanaudojamumą, sistemą suskirstyta į keturis modulius, kurių kiekvienas atlieka
+tarpusavyje nesusijusias funkcijas. Sistema moduliai yra šie:
+\begin{enumerate}
+    \item Ribų skaičiavimo modulis. Tai -- pagrindinė sistemos dalis, kuri atsakinga už pačių ribų skaičiavimą.
+    \item Sintaksinės analizės modulis (angl. \textit{parser}). Šis modulis atlieka vertimą iš vartotojo įvesto teksto į
+        ribų skaičiavimo moduliui suprantamą duomenų formatą.
+    \item Internetinio serverio modulis. Šis modulis leidžia kviesti biblioteką naudojant REST API bei pateikia vartotojo
+        sąsają, kad vartotojams ją būtų galima pasiekti naršyklėje.
+    \item Vartotojo sąsajos modulis. Tai -- internetinis puslapis, sąveikaujantis su anksčiau minėtu internetiniu serveriu,
+        kad vartotojas visą funkcionalumą galėtų pasiekti naršyklėje.
+\end{enumerate}
