user guide half done.

--- a/0_Limit Calculator Description/sections/userGuide.tex
+++ b/0_Limit Calculator Description/sections/userGuide.tex
@@ -1,1 +1,87 @@
 \section{Programos naudotojo vadovas}
+
+	Programos naudojimui sukūrėme internetinį puslapį, kurį vartotojai gali pasiekti 
+	naudojantis savo įrenginiu, turinčiu prieigą prie interneto.
+	Vartotojo sąsają sudaro keturi pagrindiniai komponentai: funkcijos ir taško įvedimo laukai, ,,='' mygtukas ir rezultato laukas.
+	
+	\begin{itemize}
+		\item funkcijos įvedimo laukas - tai tekstinis laukas, kuriame įvedama vartotojo pasirinkta funckija.
+		\item taško įvedimo laukas - tai tekstinis laukas, kuriame įvedamas vartotojo pasirinktas skaičius į kurį artėja kintamojo reikšmė.
+		\item ribos skaičiavimo mygtukas ,,='' - tai mygtukas, kurį paspaudus siunčiamas kreipimasis į serverį ir laukiamas skaičiavimo rezultatas.
+		\item rezultato laukas - tekstinis laukas, kuriame vaizduojamas gautasis skaičiavimo rezultatas. 
+		Jį sudaro gauta ribos reikšmė arba klaidos pranešimas, nusakantis kodėl nepavyko jos apskaičiuoti.
+	\end{itemize}
+	
+	
+	
+	\begin{table} [H]
+		\renewcommand{\tabularxcolumn}[1]{m{#1}}
+		\centering
+		\caption{Funkcijos lauko įvestis}
+		\label{tab:funcInput}
+		\begin{tabular} {| l | l |}
+			\hline
+			Matematinis reiškinys					& Atitikmuo sistemoje 			\\
+			\hline		
+			Suma 									& +								\\
+			\hline					
+			Atimtis 								& -								\\
+			\hline
+			Daugyba									& *								\\
+			\hline
+			Dalyba 									& 	/							\\
+			\hline
+			Kėlimas laipsniu 						& \string^							\\
+			\hline
+			Skliaustai 								& ( ir )						\\
+			\hline	
+			Sinusas 								& sin  							\\
+			\hline	
+			Kosinusas								& cos 							\\
+			\hline
+			Arktangentas							& arctg arba atan				\\
+			\hline
+			Natūrinis logoritmas					& ln 							\\
+			\hline
+			Kvadratinė šaknis						& sqrt 							\\
+			\hline
+			Konstantos e kėlimas laipsniu			& exp 							\\
+			\hline
+			$\pi$									& pi							\\
+			\hline	
+			e 										& e								\\
+			\hline
+		\end{tabular}
+	\end{table}
+	
+	
+	\begin{table} [H]
+		\renewcommand{\tabularxcolumn}[1]{m{#1}}
+		\centering
+		\caption{Taško lauko įvestis}
+		\label{tab:pointInput}
+		\begin{tabular} {| l | l |}
+			\hline
+			Matematinis reiškinys					& Atitikmuo sistemoje 			\\
+			\hline		
+			$\pi$									& pi							\\
+			\hline	
+			e 										& e								\\
+			\hline	
+			Suma 									& +								\\
+			\hline					
+			Atimtis 								& -								\\
+			\hline
+			Daugyba									& *								\\
+			\hline
+			Dalyba 									& 	/							\\
+			\hline
+			Kėlimas laipsniu 						& \string^	 							\\
+			\hline
+			Skliaustai 								& ( ir )						\\
+			\hline
+		\end{tabular}
+	\end{table}
+	
+	
+	
